commented out the visit buttons

--- a/InventoryManager.html
+++ b/InventoryManager.html
@@ -18,7 +18,7 @@
             <li><a href="experience.html">Experience</a></li>
             <li><a href="Mywork.html">A Quick Look At My Work</a></li>
             <li  class="active">
-               <!-- <div class="dropdown">
+               <div class="dropdown">
                 <span>Projects</span>
                 <div class="dropdown-content">
                     <ul>
@@ -29,13 +29,13 @@
                         <li><a href="Learn_Unity.html">Learn Unity</a></li>
                         <li class="active"><a href="InventoryManager.html">Inventory Manager</a></li>
                         <li><a href="PaintApp.html">Painting App</a></li>
-                        <li><a href="PongClone.html">Pong Clone</a></li>
+                        <!-- <li><a href="PongClone.html">Pong Clone</a></li>
                         <li><a href="AIPython3.html">AI in Python3</a></li>
                         <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
-                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
+                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li> -->
                     </ul>
                 </div>
-               </div> -->
+               </div>
             </li>
             <li class="icon">
                 <a href="javascript:void(0);" onclick="dropDownFunction()">
