--- a/Mywork.html
+++ b/Mywork.html
@@ -57,7 +57,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
-                <button><a href="Character_Manager.html">Visit</a></button>
+                <!-- <button><a href="Character_Manager.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/characterManager/character_stats.png" alt="">
@@ -86,7 +86,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
-                <button><a href="DMTools.html">Visit</a></button>
+                <!-- <button><a href="DMTools.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
@@ -115,7 +115,7 @@
                     <li>Unity Game Engine</li>
                     <li>Visual Studio</li>
                 </ul>
-                <button><a href="FarmKillPig.html">Visit</a></button>
+                <!-- <button><a href="FarmKillPig.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/FarmKillPig/FarmKillPig_dashpng.png" alt="">
@@ -149,7 +149,7 @@
                     <li>jquery</li>
                     <li></li>
                 </ul>
-                <button><a href="Learn_Unity.html">Visit</a></button>
+                <!-- <button><a href="Learn_Unity.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/comp266/comp266_desktop01.png" alt="">
@@ -179,7 +179,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
-                <button><a href="InventoryManager.html">Visit</a></button>
+                <!-- <button><a href="InventoryManager.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/inventoryManager/Inventory_Manager_Orders_Tab.jpg" alt="">
@@ -205,7 +205,7 @@
                 <ul>
                     <li>Processing</li>
                 </ul>
-                <button><a href="PaintApp.html">Visit</a></button>
+                <!-- <button><a href="PaintApp.html">Visit</a></button> -->
             </div>
             <div>
                 <img src="img/PaintApp/Image_00.png" alt="">
