updated project images and fixed spelling errors

--- a/Mywork.html
+++ b/Mywork.html
@@ -49,7 +49,7 @@
     <div class="content">
         <div class="project_piece">
             <div>
-                <a class="Title" href="Character_Manager.html">PCManager</a>
+                <h1 class="Title" href="Character_Manager.html">PCManager</h1>
                 <h3>technologies used</h3>
                 <ul>
                     <li>C#</li>
@@ -78,7 +78,7 @@
 
         <div class="project_piece">
             <div>
-                <a class="Title" href="DMTools.html">DMTools</a>
+                <h1 class="Title" href="DMTools.html">DMTools</h1>
                 <h3>technologies used</h3>
                 <ul>
                     <li>C#</li>
@@ -108,12 +108,13 @@
 
         <div class="project_piece">
             <div>
-                <a class="Title" href="FarmKillPig.html">FKP</a>
+                <h1 class="Title" href="FarmKillPig.html">FKP</h1>
                 <h3>technologies used</h3>
                 <ul>
                     <li>C#</li>
                     <li>Unity Game Engine</li>
                     <li>Visual Studio</li>
+                    <li>Paint.net</li>
                 </ul>
                 <!-- <button><a href="FarmKillPig.html">Visit</a></button> -->
             </div>
@@ -131,7 +132,7 @@
                 </p>
                 <p>
                     This project contains many different system, this includes a
-                    extendabel/modular weapon system, weather, day/night cycle, etc.
+                    extendable/modular weapon system, weather, day/night cycle, etc.
                 </p>
             </div>
         </div>
@@ -140,14 +141,14 @@
 
         <div class="project_piece">
             <div>
-                <a class="Title" href="Learn_Unity.html">Learn Unity</a>
+                <h1 class="Title" href="Learn_Unity.html">Learn Unity</h1>
                 <h3>technologies used</h3>
                 <ul>
                     <li>HTML5</li>
                     <li>CSS3</li>
                     <li>javascript</li>
                     <li>jquery</li>
-                    <li></li>
+                    <li>Youtube API</li>
                 </ul>
                 <!-- <button><a href="Learn_Unity.html">Visit</a></button> -->
             </div>
@@ -161,7 +162,7 @@
                     to guide the user through the process of creating their first game.
                     Content on the site includes learning the basics of c# and the Unity
                     Game engine. Additionally the website includes a quiz system that
-                    users can use to test themselves. The website is 100% mobiel friendy
+                    users can use to test themselves. The website is 100% mobile friendly
                     and tested in Firefox, Google Chrome, Microsoft Edge, and Safari.
                 </p>
             </div>
@@ -171,7 +172,7 @@
 
         <div class="project_piece">
             <div>
-                <a class="Title" href="InventoryManager.html">Inventory Manager</a>
+                <h1 class="Title" href="InventoryManager.html">Inventory Manager</h1>
                 <h3>technologies used</h3>
                 <ul>
                     <li>C#</li>
@@ -187,7 +188,7 @@
             <div>
                 <h3>About</h3>
                 <p>
-                    Another small Windows applicaiton that was created for another of
+                    Another small Windows application that was created for another of
                     my classes. This program was created for managing the inventory at
                     a small grocery store chain. The focus of the project was for
                     interaction design, my goal was to create a system that is
@@ -198,14 +199,14 @@
 
         <hr>
 
-        <div class="project_piece">
+        <!-- <div class="project_piece">
             <div>
                 <a class="Title" href="">Painting App</a>
                 <h3>technologies used</h3>
                 <ul>
                     <li>Processing</li>
                 </ul>
-                <!-- <button><a href="PaintApp.html">Visit</a></button> -->
+                <button><a href="PaintApp.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/PaintApp/Image_00.png" alt="">
@@ -218,9 +219,9 @@
                     one of three different brushes, changes its size, opacity, and color.
                 </p>
             </div>
-        </div>
+        </div> -->
 
-        <hr>
+        <!-- <hr> -->
 
         <!-- <div class="project_piece">
             <div>
