--- a/experience.html
+++ b/experience.html
@@ -68,22 +68,22 @@
     </p>
     <p>
         Projects that are worth noting are D&D PC manager (WPF), D&D Campaign/encounter 
-        tracker (WPF), a 2D topdown shooter (Unity), and Rougelike, Rager, Platformer (Unity).
+        tracker (WPF), a 2D top-down shooter (Unity), and Ruglike, Rager, Platformer (Unity).
 
     </p>
     <p>
         I also took it upon myself to learn Android Studio, for this I took a
         course on <a href="https://www.udemy.com/">Udemy</a> and later started
-        work on a mobile application for Dungeions & Dragons character management. 
+        work on a mobile application for Dungeons & Dragons character management. 
     </p>
 
     <hr>
 
-    <h1 class="Title">Acedemic</h1>
+    <h1 class="Title">Academic</h1>
     <p>
         During my university career I have worked with c++ to create 2 small
         console applications in groups of 4. One was a small text adventure 
-        game, on this Project applided my knowledge of design patterns. Some 
+        game, on this Project applied my knowledge of design patterns. Some 
         of the patterns used include the following.
     </p>
     <ul class="empty">
@@ -96,12 +96,12 @@
     </ul>
     <p>
         To create the game I also needed to make extensive use of OOP concepts 
-        such as inheritence, encapsulation, abstraction, etc. To make this game
+        such as inheritance, encapsulation, abstraction, etc. To make this game
         we had to use g/test, style check, and memcheck while working with git.
     </p>
     <p>
         The second application was a card game. Here our goal was to apply the
-        MVC architectural pattern. This project was split into sevral phases as
+        MVC architectural pattern. This project was split into serval phases as
         we needed to apply the agile development process. We also built upon our
         skills and tool set related to testing. for this project we needed to use
         stubs and mocking to write our tests. 
