updated about page

--- a/index.html
+++ b/index.html
@@ -48,62 +48,53 @@
 </header>
   
 <div class="content">
-    <h1 class="Title">About Me!</h1>
+    <h1 class="Title">About Kelsey!</h1>
     <p>
-       Kelsey,
+        Welcome to my portfolio! With seven years of experience in programming, 
+        particularly with C#, I've developed a profound passion for crafting 
+        elegant solutions to complex problems. My journey into the world of 
+        programming has been nothing short of exhilarating, fueled by a 
+        relentless curiosity and a genuine love for the craft.
     </p>
     <p>
-        Software developer by training, designer in practice.
+        My expertise spans across various domains, including game development, 
+        web development, and desktop application development. Whether I'm 
+        delving into the immersive realms of game design, architecting robust 
+        web applications, or crafting intuitive desktop solutions, I thrive on 
+        the creative challenges each domain presents.
     </p>
-
     <p>
-        Kelsey is a New Media Practitioner with a background in 
-        computer science. His education consists of a BFA/BSc in 
-        New Media and Computer Science (Fall 2024). Currently 
-        Kelsey works as a Web Accessibility Assistant for the 
-        institution he attends, writing image descriptions 
-        for a calculus textbook. Kelsey was introduced to 
-        programming and game design back in 2016, through the 
-        Unity game engine. Since then, Kelsey’s programming 
-        skills have continued to grow and his design focus have 
-        shifted to interaction design, with the goal of creating 
-        a more accessible digital world. Kelsey is working towards 
-        this goal by follow accessibility practices and 
-        implementing accessibility features into the interactive 
-        systems he creates. Outside of work and academics Kelsey 
-        continues to enjoy making small games, bike rides, and 
-        playing Volleyball. 
+        At the heart of my programming philosophy lies a deep understanding of 
+        object-oriented programming principles. I believe in writing clean, 
+        maintainable code that not only solves the immediate task at hand but 
+        also sets a solid foundation for future scalability and extensibility.
     </p>
-    <hr>
-    <h2>Artist Statement</h2>
     <p>
-        My journey began in 2016 when I learned about Unity from an 
-        online ad for a course on Udemy by GameDev.tv. I had always 
-        wanted to make games and learn to program; my discovery 
-        afforded me the opportunity to do both. I started out 
-        designing small games, but this quickly morphed into doing
-         interaction design for games and other interactive systems. 
-         My focus shifted from making games that were fun to play 
-         to being making games that felt good to play while still 
-         being fun. At this time, I also started making of types 
-         of software outside of games like a character manager 
-         for tabletop RPGs. The focus of my work is to make 
-         interactive systems that are simple to use and as 
-         accessible as I can manage with the technologies I 
-         have available to me. I believe in giving users 
-         multiple ways to complete tasks as this will not only 
-         help with accessibility but also supports a range of 
-         different types of users. Having more than one way to 
-         complete a task means novice users can have an 
-         easy-to-follow method, but power users can also be 
-         accommodated with short-cuts and other features that 
-         are quicker than the step by step process a new user 
-         would follow. For me creating simple to use interactive 
-         systems means breaking things down to the bare minimum and 
-         discarding anything that is not relevant to the current 
-         context of the system state. This lessons the cognitive 
-         load on the end user, making things easier for new users.
+        Driven by a constant hunger for learning and growth, I'm always 
+        exploring new technologies and methodologies to stay at the forefront 
+        of innovation. As I continue to evolve as a programmer, I remain 
+        committed to delivering exceptional results and pushing the boundaries 
+        of what's possible.
     </p>
+    <p>
+        Join me on this exciting journey as we turn ideas into reality, one 
+        line of code at a time.
+    </p>
+    <h3>Education:</h3>
+    <div>
+        <div>
+           <h4>Bachelor of Science (BSc) in Computer Science</h4>
+           <h5>University of Lethbridge - 2024</h5>
+        </div>
+        <h4>Classes:</h4>
+        <ul>
+            <li>Human-Computer Interaction</li>
+            <li>Computer Graphics</li>
+            <li>Artificial Intelligence</li>
+            <li>Operating Systems</li>
+            <li>INtroduction to Databases</li>
+        </ul>
+       </div>
 </div>
     
 <footer>
