--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li>Computer Graphics</li>
             <li>Artificial Intelligence</li>
             <li>Operating Systems</li>
-            <li>INtroduction to Databases</li>
+            <li>Introduction to Databases</li>
         </ul>
        </div>
 </div>
