added skills to the about page

--- a/index.html
+++ b/index.html
@@ -83,8 +83,40 @@
 
     <hr>
 
+    <h3>Skills</h3>
+    <div id="skills">
+        <ul>
+            <li>C#</li>
+            <li>Visual Studio</li>
+            <li>Unity Game Engine</li>
+            <li>Windows Presentation Foundation (WPF)</li>
+            <li>Git</li>
+            <li>Visual Studio Code</li>
+            <li>Python</li>
+            <li>C++</li>
+        </ul>
+        <ul>
+            <li>Java</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>JavaScript</li>
+            <li>jquery</li>
+            <li>Json</li>
+        </ul>
+        <ul>
+            <li>Problem Solving</li>
+            <li>Communication</li>
+            <li>Working Independently</li>
+            <li>Team Work</li>
+            <li>Writing Clean/Maintainable Code</li>
+            <li>UML</li>
+            <li>Unit Testing</li>
+        </ul>
+    </div>
+    <hr>
+
     <h3>Education:</h3>
-    <div>
+    <div id="Education">
         <div>
            <h4>Bachelor of Science (BSc) in Computer Science</h4>
            <h5>University of Lethbridge - 2024</h5>
@@ -97,7 +129,7 @@
             <li>Operating Systems</li>
             <li>Introduction to Databases</li>
         </ul>
-       </div>
+    </div>
 </div>
     
 <footer>
