updated the footer the be more responsive

--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
     <hr>
 
     <h3>Education:</h3>
-    <div id="Education">
-        <div>
+    <div>
+        <div id="Education">
            <h4>Bachelor of Science (BSc) in Computer Science</h4>
+           <h5>Minor in New Media</h5>
            <h5>University of Lethbridge - 2024</h5>
         </div>
         <h4>Classes:</h4>
