--- a/Mywork.html
+++ b/Mywork.html
@@ -327,7 +327,7 @@
         </ul>
         <div>
         </div>
-        <a href="#menu" id="back_to_top">
+        <a id="back_to_top">
             <img src="img/back_to_top_arrow.svg" alt="">
         </a>
     </footer>
