added open source section to experience page

--- a/experience.html
+++ b/experience.html
@@ -59,6 +59,30 @@
 
     <hr>
 
+    <h1 class="Title">Open Source</h1>
+    <h1>
+        <a href="https://github.com/TagStudioDev/TagStudio">Tag Studio</a>
+    </h1>
+    <p>
+        TagStudio is a photo & file organization application with an underlying 
+        system that focuses on giving freedom and flexibility to the user. No
+        proprietary programs or formats, no sea of sidecar files, and no 
+        complete upheaval of your filesystem structure. 
+        (<a 
+        href="https://github.com/TagStudioDev/TagStudio/blob/main/README.md">
+            Source
+        </a>)
+    </p>
+    <h3>Contributions</h3>
+    <p>
+        At the time of writing, Tag Studio is under going a transition from a
+        .json data storage solution to an SQL solution. To contribute to this
+        project I have focused on bug fixes and helping bring feature parity 
+        to the SQL migration code.
+    </p>
+
+    <hr>
+
     <h1 class="Title">Personal</h1>
     <p>
         During my free time I do like to write my own software, and have worked
