--- a/experience.html
+++ b/experience.html
@@ -49,6 +49,20 @@
   
 <div class="content">
     <h1 class="Title">Professional</h1>
+    <h3>Acuren</h3>
+    <p>
+        I was hired by Acuren to remake an app they use for internal work. I created a new Android app 
+        using Kotlin, Jetpack Compose, and Android Studio. 
+    </p>
+    <h5>Features</h5>
+    <ul>
+        <li>Communicate with Bluetooth devices using serial Bluetooth and BLE.</li>
+        <li>Communicate with a UDP and TCP server to send and receive data.</li>
+        <li>Log and record data</li>
+        <li>Use the camera and manage files.</li>
+    </ul>
+    <hr>
+    <h3>Barmac</h3>
     <p>
         I did a freelance project right out of highschool to update the website
         for a local company. I create the website using the MEAN development 
@@ -60,9 +74,9 @@
     <hr>
 
     <h1 class="Title">Open Source</h1>
-    <h1>
+    <h3>
         <a href="https://github.com/TagStudioDev/TagStudio">Tag Studio</a>
-    </h1>
+    </h3>
     <p>
         TagStudio is a photo & file organization application with an underlying 
         system that focuses on giving freedom and flexibility to the user. No
@@ -73,7 +87,7 @@
             Source
         </a>)
     </p>
-    <h3>Contributions</h3>
+    <h5>Contributions</h5>
     <p>
         At the time of writing, Tag Studio is under going a transition from a
         .json data storage solution to an SQL solution. To contribute to this
