--- a/experience.html
+++ b/experience.html
@@ -60,6 +60,8 @@
         <li>Communicate with a UDP and TCP server to send and receive data.</li>
         <li>Log and record data</li>
         <li>Use the camera and manage files.</li>
+        <li>Real time rendering</li>
+        <li>Map location drawing</li>
     </ul>
     <hr>
     <h3>Barmac</h3>
