--- a/experience.html
+++ b/experience.html
@@ -54,7 +54,7 @@
         I was hired by Acuren to remake an app they use for internal work. I created a new Android app 
         using Kotlin, Jetpack Compose, and Android Studio. 
     </p>
-    <h5>Features</h5>
+    <h4>Features</h4>
     <ul>
         <li>Communicate with Bluetooth devices using serial Bluetooth and BLE.</li>
         <li>Communicate with a UDP and TCP server to send and receive data.</li>
@@ -89,7 +89,7 @@
             Source
         </a>)
     </p>
-    <h5>Contributions</h5>
+    <h4>Contributions</h4>
     <p>
         At the time of writing, Tag Studio is under going a transition from a
         .json data storage solution to an SQL solution. To contribute to this
@@ -114,7 +114,7 @@
     <p>
         I also took it upon myself to learn Android Studio, for this I took a
         course on <a href="https://www.udemy.com/">Udemy</a> and later started
-        work on a mobile application for Dungeons & Dragons character management. 
+        work on a mobile application for Dungeons & Dragons character management and found employment as an Android developer. 
     </p>
 
     <hr>
